packages/es5-ext@4d7f742/test/error/custom.load.js
montageDefine("4d7f742","test/error/custom",{dependencies:[],factory:function(r,o,e){"use strict";e.exports=function(r,o){var e=r,t=new e("My Error","MY_ERROR",{errno:123});o(t instanceof Error,!0,"Instance of error"),o(t.constructor,Error,"Constructor"),o(t.name,"Error","Name"),o(String(t),"Error: My Error","String representation"),o(t.code,"MY_ERROR","Code"),o(t.errno,123,"Errno"),o(typeof t.stack,"string","Stack trace")}}});